--- a/index.html
+++ b/index.html
@@ -1,16 +1,30 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <meta charset="utf-8">
-  <title>Assignment_4</title>
-  <script>
-    var names = []; // DO NOT REMOVE
-  </script>
-  <script src="SpeakHello.js"></script>
-  <script src="SpeakGoodBye.js"></script>
-  <script src="script.js"></script>
+    <meta charset="utf-8">
+    <title>Assignment_4</title>
+    <script>
+        var names = []; // DO NOT REMOVE
+    </script>
+    <script src="SpeakHello.js"></script>
+    <script src="SpeakGoodBye.js"></script>
+    <script src="script.js"></script>
 </head>
+
 <body>
-  <h1>Assignment_4</h1>
+    <h1 style="margin-top: 2px; margin-bottom: 100px; text-align: center; font-family: Arial, Helvetica, sans-serif; font-size: 5em;">Open Console</h1>
+    <div style="text-align: center; margin-bottom: 70px;">
+        <div style= "margin: 40px; margin-bottom: 20px;"><img src="https://cdn-icons-png.flaticon.com/512/0/747.png" alt="Windows" width="70px"></div>
+        <div style="text-align: center; font-family:Arial, Helvetica, sans-serif; border-radius: 1%; font-size: 300%;"> Cmd + Option + J</div> 
+    </div>
+    <hr width="10%">
+    <div style="text-align: center;">
+        <div style= "margin: 40px; margin-bottom: 20px;"><img src="https://cdn-icons-png.flaticon.com/128/732/732076.png" alt="Windows" width="70px"></div>
+        <div style="text-align: center; font-family:Arial, Helvetica, sans-serif; border-radius: 1%; font-size: 300%;"> Ctrl + Shift + J</div> 
+    </div>
+
+
 </body>
+
 </html>
